# chaton

./: README.md  chaton.cabal  stack.yaml
autostart/: 99-chaton.desktop
src/: Main.hs
