cabal-version: 1.12

name:           chaton
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/mjepronk/chaton#readme>
homepage:       https://github.com/mjepronk/chaton#readme
bug-reports:    https://github.com/mjepronk/chaton/issues
author:         Matthias Pronk
maintainer:     matthias@remakingthe.world
copyright:      2020 Matthias Pronk
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mjepronk/chaton

executable chaton
  main-is: Main.hs
  other-modules:
      Paths_chaton
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , evdev >= 2.0.0.0
    , mtl
    , text
    , time
    , process
  default-language: Haskell2010

